--- a/Ch7Notes.md.html
+++ b/Ch7Notes.md.html
@@ -155,9 +155,9 @@ Possible extra projects:
 
 
 
-### Day 2
+## Day 2
 
-#### Interesting material here on the compute model
+### Interesting material here on the compute model
 
 Hierarchy of compute resources:
 
@@ -196,7 +196,7 @@ write arch-specific code for max perf, then what was the point of
 OpenCL?
 
 
-#### OpenCL FindDevices output on my MacBookPro 15" 2016:
+### OpenCL FindDevices output on my MacBookPro 15" 2016:
 
 ```
 Found 1 OpenCL platform(s)
@@ -234,14 +234,14 @@ Workgroup size: 256
 
 Noted: Work-groups are _small_. Not big enough for a single large array of floats.
 
-#### MapReduce to find minimum element in OpenCL
+### MapReduce to find minimum element in OpenCL
 
 Interesting. Seems surprisingly analogous to the tricks people play to
 map-reduce over multiple hosts in a distributed compute setup.
 
 `barrier` as a synchronization primitive is notable.
 
-### Day 3: Ripple example
+## Day 3: Ripple example
 
 What is data-parallelized and what is handled by loop here?
 
